<resources>
    <string name="app_name">UX-Quiz</string>
    <string name="btn_feedback_next1">Next</string>
    <string name="btn_feedback_back_step1">Try it again</string>
    <string name="btn_feedback_final_step1">Submit quiz</string>
    <string name="btn_feedback_survey_result1">Quiz results</string>
    <string name="set_feedback_max_score1">5</string>
    <string name="txt_feedback_other1">Quiz results</string>
    <string name="txt_feedback_other2">You have scored&#160;</string>
    <string name="txt_feedback_other3">&#160;out of&#160;</string>
    <string name="txt_feedback_other4">:</string>
    <string name="btn_courtcounter_reset1">Reset</string>
    <string name="intro_feedback">Please fill out this quize to provide us feedback on how you are doing.</string>
    <string name="intro_feedback_notes1">Each question has a correct answer.</string>
    <string name="intro_feedback_notes2">Step 2/5</string>
    <string name="intro_feedback_notes3">Step 3/5</string>
    <string name="intro_feedback_notes4">Step 4/5</string>
    <string name="intro_feedback_notes5">Step 5/5</string>
    <string name="items_feedback_required1">What does the aesthetic-usability effect refer to?</string>
    <string name="items_feedback_required1b">Choose a, b, c, d or e</string>
    <string name="items_feedback_required_ch11">People tend to perceive usable products as more attractive.</string>
    <string name="items_feedback_required_ch12">People tend to perceive attractive products as more usable.</string>
    <string name="items_feedback_required_ch13">Usability and aesthetics are equally important in web design.</string>
    <string name="items_feedback_required_ch14">The perception of attractiveness and usability of a new site are evaluated in the first 50ms when a user first sees the site.</string>
    <string name="items_feedback_required_ch15">As much as possible to impress users</string>
    <string name="items_feedback_required2">Which of the following is NOT a type of microcontent?</string>
    <string name="items_feedback_required_ch21">Page title</string>
    <string name="items_feedback_required_ch22">Headline</string>
    <string name="items_feedback_required_ch23">Tagline</string>
    <string name="items_feedback_required_ch24">Email body</string>
    <string name="items_feedback_required3">Which of the following does NOT usually appear in a service blueprint?</string>
    <string name="items_feedback_required_ch31">Customer emotions</string>
    <string name="items_feedback_required_ch32">Customer actions</string>
    <string name="items_feedback_required_ch33">Processes</string>
    <string name="items_feedback_required_ch34">Backstage actions</string>
    <string name="items_feedback_required4">1 factor that the best describe user experience?</string>
    <string name="items_feedback_required_c_txte41">Useful</string>
    <string name="items_feedback_required_c_txte42">Usable</string>
    <string name="items_feedback_required_c_txte43">Accessible</string>
    <string name="items_feedback_required_c_txte44">Findable</string>
    <string name="items_feedback_required5">Which part of a webpage receives most of the users’ fixations?</string>
    <string name="items_feedback_required_rd51">Left half of the page</string>
    <string name="items_feedback_required_rd52">Right half of the page</string>
    <string name="any_other_feedback">Your name</string>
    <string name="msg_feedback_confirmation">Thank you for providing your feedback.</string>
    <string name="msg_feedback_final_confirmation">We thank you for your time spent taking this survey. Your response has been recorded.</string>
    <string name="txt_tbl_title_news1">News</string>
    <string name="txt_tbl_title_following1">Following</string>
    <string name="txt_tbl_title_followers1">Followers</string>
    <string name="txt_tbl_cal_items_news1">35</string>
    <string name="txt_tbl_cal_items_following1">7</string>
    <string name="txt_tbl_cal_items_followers1">3</string>
    <string name="txt_tbl_header_headline1">Primary school in which children receive elementary education.</string>
    <string name="txt_tbl_header_logo_alt1">Primary school name</string>
    <string name="txt_tbl_header_profile1_1">Name</string>
    <string name="txt_tbl_header_profile1_2">Birthday</string>
    <string name="txt_tbl_header_profile1_3">Country</string>
    <string name="txt_tabs_title1">Trending Now</string>
    <string name="txt_tabs_title2">Openning Hours</string>
    <string name="txt_tabs_title3">Headmaster News</string>
    <string name="txt_tabs_title4">UX-Quiz</string>
    <string name="txt_tabs_items2_1_1">Osnovna šola Toma Brejca</string>
    <string name="txt_tabs_items2_1_2">Šutna 39</string>
    <string name="txt_tabs_items2_1_3">1241 Kamnik</string>
    <string name="txt_tabs_items2_1_4">01 830 3780</string>
    <string name="txt_tabs_items2_1_5">070 656 807</string>
    <string name="txt_tabs_items2_1_6">os-tb.kamnik@guest.arnes.si</string>
    <string name="txt_tabs_items2_1_7">Monday&#160;&#8211;&#160;Friday&#160;08.20&#160;&#8211;&#160;12.40</string>
    <string name="txt_tabs_items2_1_8">1.9.2017&#160;&#8211;&#160;22.6.2018</string>
    <string name="txt_hint_txte41">Use</string>
    <string name="txt_hint_txte42">Usa</string>
    <string name="txt_hint_txte43">Acce</string>
    <string name="txt_hint_txte44">Find</string>
    <string name="txt_tbl_webicons_title1">Feed</string>
    <string name="txt_tbl_webicons_title2">Discovery</string>
    <string name="txt_tbl_webicons_title3">Easy access</string>
    <string name="txt_tbl_webicons_title4">Add</string>
    <string name="txt_tbl_webicons_title5">Profile</string>
</resources>




