<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/linearLayoutHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="#FFFFFF">

                <ImageView
                    android:id="@+id/profile_picture"
                    android:layout_width="70dp"
                    android:layout_height="46dp"
                    android:layout_marginBottom="14dp"
                    android:layout_marginLeft="7dp"
                    android:layout_marginRight="7dp"
                    android:layout_marginTop="25dp"
                    android:contentDescription="@string/txt_tbl_header_logo_alt1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#FFFFFF">

                    <TextView
                        android:id="@+id/txt_tbl_header_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="8dp"
                        android:paddingEnd="10dp"
                        android:paddingLeft="25dp"
                        android:paddingRight="10dp"
                        android:paddingStart="25dp"
                        android:paddingTop="8dp"
                        android:textColor="#000000"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#FFFFFF">

                    <TextView
                        android:id="@+id/txt_tbl_header_birthday"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="8dp"
                        android:paddingEnd="10dp"
                        android:paddingLeft="25dp"
                        android:paddingRight="10dp"
                        android:paddingStart="25dp"
                        android:paddingTop="8dp"
                        android:textColor="#000000"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#FFFFFF">

                    <TextView
                        android:id="@+id/txt_tbl_header_country"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="8dp"
                        android:paddingEnd="10dp"
                        android:paddingLeft="25dp"
                        android:paddingRight="10dp"
                        android:paddingStart="25dp"
                        android:paddingTop="8dp"
                        android:textColor="#000000"
                        android:textSize="14sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutTab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linearLayoutHeader"
            android:background="#3D3B3E"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:paddingLeft="7dp"
                android:paddingRight="7dp"
                android:paddingStart="7dp"
                android:paddingTop="8dp"
                android:text="@string/txt_tabs_title4"
                android:textColor="#FFFFFF"
                android:textSize="22sp"
                android:textStyle="bold" />


            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_marginTop="3dp"
                android:background="@android:color/holo_green_dark"></View>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/linearLayoutTabBody"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/linearLayoutTab"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/intro_feedback"
                android:textAllCaps="false"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/intro_feedback_notes5"
                android:textAllCaps="false"
                android:textColor="@android:color/black"
                android:textSize="16sp" />


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"></View>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/items_feedback_required5"
                android:textAllCaps="false"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/items_feedback_required_res51"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/items_feedback_required_rd51"
                    android:textAppearance="?android:textAppearanceMedium" />

                <RadioButton
                    android:id="@+id/items_feedback_required_res52"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/items_feedback_required_rd52"
                    android:textAppearance="?android:textAppearanceMedium" />
            </RadioGroup>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"></View>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/any_other_feedback"
                android:textAllCaps="false"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/feedback_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"></View>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/msg_feedback_confirmation"
                android:textAllCaps="false"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <Button
                android:id="@+id/items_feedback_survey_results_btn1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:onClick="surveyResults"
                android:text="@string/btn_feedback_survey_result1"
                android:textAllCaps="true" />

            <Button
                android:id="@+id/items_feedback_back_btn1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/btn_feedback_back_step1"
                android:textAllCaps="true" />
        </LinearLayout>


    </RelativeLayout>
</ScrollView>
